--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("HemirealNumbers"); Pkg.test("HemirealNumbers"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("HemirealNumbers"); Pkg.test("HemirealNumbers"; coverage=true)'
+after_success:
+    - if [ $TRAVIS_JULIA_VERSION = "0.4" ] && [ $TRAVIS_OS_NAME = "linux" ]; then
+         julia -e 'cd(Pkg.dir("HemirealNumbers")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())';
+      fi
