--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.10'
-          - 'pre'
+          - 'min'
+          - '1'
         os:
           - ubuntu-latest
         arch:
